--- a/fftw/api/Makefile.in
+++ b/fftw/api/Makefile.in
@@ -124,7 +124,7 @@ am_libapi_la_OBJECTS = apiplan.lo configure.lo execute-dft-c2r.lo \
 	version.lo plan-guru64-dft-c2r.lo plan-guru64-dft-r2c.lo \
 	plan-guru64-dft.lo plan-guru64-r2r.lo \
 	plan-guru64-split-dft-c2r.lo plan-guru64-split-dft-r2c.lo \
-	plan-guru64-split-dft.lo mktensor-iodims64.lo
+	plan-guru64-split-dft.lo mktensor-iodims64.lo dyalog.lo
 libapi_la_OBJECTS = $(am_libapi_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -396,7 +396,7 @@ plan-guru-dft.h plan-guru-r2r.h plan-guru-split-dft-c2r.h		\
 plan-guru-split-dft-r2c.h plan-guru-split-dft.h plan-guru64-dft-c2r.c	\
 plan-guru64-dft-r2c.c plan-guru64-dft.c plan-guru64-r2r.c		\
 plan-guru64-split-dft-c2r.c plan-guru64-split-dft-r2c.c			\
-plan-guru64-split-dft.c mktensor-iodims64.c
+plan-guru64-split-dft.c mktensor-iodims64.c dyalog.c
 
 BUILT_SOURCES = fftw3.f fftw3.f03.in fftw3.f03 fftw3l.f03 fftw3q.f03
 CLEANFILES = fftw3.f03
@@ -458,6 +458,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/apiplan.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/configure.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dyalog.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/execute-dft-c2r.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/execute-dft-r2c.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/execute-dft.Plo@am__quote@
